<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_akun"
        android:icon="@drawable/baseline_account_circle_white_18dp"
        android:orderInCategory="100"
        android:title="@string/akun_saya"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/action_menu1"
                android:orderInCategory="1"
                android:title="@string/masuk_daftar" />

            <item
                android:id="@+id/action_menu2"
                android:orderInCategory="2"
                android:title="@string/pesanan_saya" />

            <item
                android:id="@+id/action_menu3"
                android:orderInCategory="3"
                android:title="@string/favorit_kos_saya" />

            <item
                android:id="@+id/action_menu4"
                android:orderInCategory="4"
                android:title="@string/penilaian_kos_saya" />

            <item
                android:id="@+id/action_menu5"
                android:orderInCategory="5"
                android:title="@string/pengaturan_akun" />

            <item
                android:id="@+id/action_menu6"
                android:orderInCategory="6"
                android:title="@string/chat_dengan_himid_ku" />
        </menu>
    </item>
</menu>
